fixed horizontal scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body {
   color: black;
   background-color: #161616;
   font-family: Changa, sans-serif;
+  overflow-x: hidden;
 }
 
 a {
